--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -29,9 +29,9 @@
        <!-- <a class="navbar-brand" href="{% url 'profile' %}">profile</a> -->
        <a class="navbar-brand"  href="{% url 'contact' %}">Contact Us</a>
        <a class="navbar-brand" href="{% url 'about' %}">About Us</a>
-       <a href="accounts/login" class="navbar-brand">Login</a>
+       <a href="login" class="navbar-brand">Login</a>s
        
-      <a href="{% url 'EnregistrementClient' %}" class="navbar-brand">Inscription</a>
+      <a href="{% url 'Inscription' %}" class="navbar-brand">Inscription</a>
 
 
        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
