--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -24,12 +24,12 @@
   <body>
     <nav class="navbar navbar-dark bg-dark">
      <div class="container">
-       <!-- <a class="navbar-brand" href="/">Agence_Immobliére</a> -->
+        <a class="navbar-brand" href="/">Agence Immobliére</a>
        <a class="navbar-brand"  href="/">Home</a>
        <!-- <a class="navbar-brand" href="{% url 'profile' %}">profile</a> -->
        <a class="navbar-brand"  href="{% url 'contact' %}">Contact Us</a>
        <a class="navbar-brand" href="{% url 'about' %}">About Us</a>
-       <a href="login" class="navbar-brand">Login</a>s
+       <a href="{% url 'ajouter_maison' %}" class="navbar-brand">insertion</a>
        
       <a href="{% url 'Inscription' %}" class="navbar-brand">Inscription</a>
 
