--- a/app/templates/app/maison.html
+++ b/app/templates/app/maison.html
@@ -8,13 +8,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'app/images/maison/T.PNG' %}" class="d-block w-100" alt="..."> 
+      <img src="{% static 'app/images/maison/T.jpg' %}" class="d-block w-100" alt="..."> 
     </div>
     <div class="carousel-item">
-      <img src="{% static 'app/images/maison/23.PNG' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'app/images/maison/23.jpg' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'app/images/maison/24.PNG' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'app/images/maison/24.jpg' %}" class="d-block w-100" alt="...">
     </div>
     
   </div>
