--- a/app/templates/app/ajouter_maison.html
+++ b/app/templates/app/ajouter_maison.html
@@ -1,6 +1,7 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% crispy %}
 
 {% block content %}
 <div class="container">
