--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -19,7 +19,7 @@
 
     <div class="col-md-6 col-sm-12">
 
-        <img src="{% static 'app/images/34.JPG'%}" style="width: 100%;height: 100%;">
+        <img src="static/app/images/34.JPG" style="width: 100%;height: 100%;">
 
     </div>
 
@@ -41,7 +41,7 @@
 
     <div class="col-md-6 col-sm-12">
 
-        <img src="{% static 'app/images/33.JPG'%}" style="width: 100%;height: 100%;">
+        <img src="static/app/images/33.JPG" style="width: 100%;height: 100%;">
 
     </div>
 
